# src/_generated/api-types/LoginResponse.ts
@@ -1,0 +1,12 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4'
+
+export const LoginResponse = z.object({
+  message: z.string().optional(),
+})
+
+export type LoginResponse = z.infer<typeof LoginResponse>
