# src/queries.ts
@@ -3,13 +3,16 @@ import {
   useMutation,
   useQueryClient,
 } from "@tanstack/react-query";
+import { useRouter } from "@tanstack/react-router";
 import _baseKy from "ky";
 
 import {
   GetFeedbackDashboardListQueryResponse,
   GetImageByIdQueryResponse,
+  GetMeQueryResponse,
   GetRecipeDashboardListQueryResponse,
   GetRecipeQueryResponse,
+  LoginResponse,
   type NewApprovalStatus,
   SetFeedbackApprovalStatusMutationResponse,
 } from "./_generated";
@@ -101,3 +104,57 @@ export function useSetFeedbackApprovalStatusMutation() {
     },
   });
 }
+
+export const meQueryOpts = () =>
+  queryOptions({
+    queryKey: ["admin", "me"],
+    async queryFn() {
+      try {
+        const response = await ky.get("/api/admin/me").json();
+        return GetMeQueryResponse.parse(response);
+      } catch (err) {
+        console.warn("Me-Query failed", err);
+        return null;
+      }
+    },
+  });
+
+type MutationArgs = {
+  username: string;
+  password: string;
+};
+
+export const useLoginMutation = () => {
+  const queryClient = useQueryClient();
+  const router = useRouter();
+
+  return useMutation({
+    async mutationFn(args: MutationArgs) {
+      const response = await ky.post("/api/login", { json: args }).json();
+      return LoginResponse.parse(response);
+    },
+    onError(err) {
+      console.log("Login failed", err);
+      // ...
+    },
+    async onSettled() {
+      queryClient.clear();
+      await router.invalidate({ sync: true });
+    },
+  });
+};
+
+export const useLogout = () => {
+  const router = useRouter();
+  const queryClient = useQueryClient();
+
+  return useMutation({
+    async mutationFn() {
+      await ky.post("/api/logout").json();
+    },
+    async onSettled() {
+      queryClient.clear();
+      await router.invalidate({ sync: true });
+    },
+  }).mutate;
+};
